[package]
name = "pledger"
version = "0.8.0"
authors = ["William Woodruff <william@yossarian.net>"]
edition = "2021"
description = "A small personal expense ledger"
license-file = "LICENSE"
readme = "README.md"
homepage = "https://github.com/woodruffw/pledger"

[package.metadata.release]
dev-version = false
publish = false # handled by GitHub Actions
push = true

[dependencies]
anyhow = "1.0"
chrono = "0.4.22"
clap = { version = "4.0.9", features = ["env"] }
env_logger = "0.9"
lazy_static = "1.4.0"
log = "0.4"
num-traits = "0.2"
phf = { version = "0.11.1", features = ["macros"] }
regex = "1"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
